# elevate

./: .env.backend.template  .env.frontend.template  .gitignore  CLAUDE.md  README.md  docker-compose.yaml
backend/: Dockerfile  Dockerfile.celery  Dockerfile.prod  FACEBOOK_TESTING_GUIDE.md  FACEBOOK_TESTING_SUMMARY.md  add_passwords.py  celerybeat-schedule  celerybeat-schedule-shm  celerybeat-schedule-wal  create_portal_config.py  data1.csv  docker-compose.celery.yml  docker-compose.prod.yml  pyproject.toml  quick_start_facebook_testing.bat  quick_start_facebook_testing.sh  setup_facebook_testing.py  test_facebook_posting.py
backend/api/: admin.py  api.py  apps.py  celery.py  exceptions.py  models.py  permissions.py  serializers.py  settings.py  tasks.py  urls.py  utils.py  views.py
backend/api/apis/: auth.py  canva.py  comments.py  credits.py  direct_messages.py  email.py  google_oauth.py  iframe_menu.py  integrations.py  media.py  milo.py  openai.py  orders.py  plans.py  posts.py  realtime.py  storefront.py  stripe_connect.py  subscriptions.py  system_config.py  upload.py  webhooks.py
backend/api/migrations/: 0002_aichathistory_socialpost_subscription_triggerrule_and_more.py  0003_remove_socialpost_user_and_more.py  0004_socialmediaplatform_socialmediaconnection_and_more.py  0005_usersociallinks.py  0006_plan_alter_subscription_options_and_more.py  0007_socialmediaconnection_facebook_page_id_and_more.py  0008_fix_social_media_constraints.py  0009_fix_empty_string_constraints.py  0010_increase_profile_url_length.py  0011_add_pinterest_support.py  0033_order.py  (+48 more)
(+278 files in other folders)
